<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="action_settings">Settings</string>

    <string name="email">enter your mail</string>
    <string name="password">enter your password</string>
    <string name="password_conformation">confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="error">error</string>
    <string name="sign_in">Sign In</string>
    <string name="program_name">OLOLO</string>
    <string name="title_activity_intro">OLOLO</string>
    <string name="title_activity_sign_in">OLOLO</string>
    <string name="title_activity_sign_up">OLOLO</string>
    <string name="registration_faild">User already exist</string>
    <string name="password_wrong">Wrong password</string>
    <string name="title_activity_form_activity">Edit profile</string>
    <string name="form_name">name</string>
    <string name="form_birthday">birthday</string>
    <string name="form_sex">sex</string>
    <string name="form_text">fill the form below</string>
    <string name="logout">Log out</string>
    <string name="edit_prof">Edit profile</string>
    <string name="buttun_form_image">photo</string>
    <string name="button_form_submit">save</string>
    <string name="ok">OK</string>
    <string name="send">send</string>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="button_post">new post</string>
    <string name="title_activity_create_post"></string>
    <string name="gallary">load from gallery</string>
    <string name="shot">take a shot</string>
    <string name="connection_faild">no connection to the internet</string>
    <string name="wait">Please wait...</string>
    <string name="wrong_login_password">Wrong login or password</string>
    <string name="title_activity_post_details"></string>
    <string name="add_comment">send</string>
    <string name="title_activity_comment_details"></string>
    <string name="edit">edit comment</string>
    <string name="delete">delete comment</string>
    <string name="title_activity_side_menu">OLOLO</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profile">My profile</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="feed">Feed</string>

    <string-array name="left_menu">
        <item>My profile</item>
        <item>Log out</item>
        <item>Search</item>
        <item>Edit profile</item>
        <item>Feed</item>
    </string-array>
    <string name="search">Search</string>
    <string name="search_name">Enter search name</string>
    <string name="followings">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="title_activity_user"></string>
    <string name="no_users">No users found</string>
    <string name="my_profile"> (my profile) </string>
    <string name="title_activity_follow"></string>
    <string name="facebook_app_id">1633762573546029</string>

</resources>
