<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"

       >

        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:id="@+id/form_image"
            android:clickable="true"
            android:onClick="onImageAdd"
            android:hint="@string/buttun_form_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add_photo"
            android:adjustViewBounds="false" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_name"
            style="@style/form_button"
            android:background="@android:color/transparent"
            android:hint="@string/form_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_birthday"
            style="@style/form_button"
            android:clickable="true"
            android:onClick="onDateChoose"
            android:hint="@string/form_birthday"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_sex"
            android:clickable="true"
            android:onClick="onSexChoose"
            style="@style/form_button"
            android:hint="@string/form_sex"
            />


    </LinearLayout>


</LinearLayout>