<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material_design"

    android:gravity="bottom">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/registration_feild"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_sign_up"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_sign_up1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_sign_up2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_conformation"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="signUp"
        android:id="@+id/signUp"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/mega_margin"
        android:layout_marginLeft="@dimen/mega_margin"
        android:layout_marginRight="@dimen/mega_margin"
        android:layout_gravity="center_horizontal" />
</LinearLayout>