<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back6"
    android:id="@+id/layout1"
    android:gravity="bottom"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_faild"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_weight="0.04" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_sign_in"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        android:ems="10"
        android:id="@+id/password_sign_in"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        android:id="@+id/button"
        android:background="@color/button1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>