<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.android.volley.toolbox.NetworkImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/prof_image"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="centerCrop"
        android:focusableInTouchMode="false"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prof_name"
            android:textSize="22dp"
            android:singleLine="false"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prof_bday"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:layout_marginLeft="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/follower_count" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:id="@+id/button_followers"
                android:clickable="true"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/following_count" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followings"
                android:clickable="true"
                android:id="@+id/button_followings"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textStyle="normal" />

        </LinearLayout>



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:id="@+id/checkBoxFollow"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>